syntax = "proto3";
package shop;
import "proto/dbmodel/dbmodel.proto";

import "proto/dbmodel/model.proto";
service ShopSrv {
  rpc EditShop (dbmodel.SysShop) returns (dbmodel.Id);
  rpc DelShop(dbmodel.Id)returns(dbmodel.Id){}
  rpc ShopList(dbmodel.PageReq)returns(dbmodel.PageResp){}
}